--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -12,6 +12,8 @@ $drawing-board-border:                       0.0625rem solid map-get($grays, 'li
 $drawing-board-box-shadow:                   0 0 0.9375rem 0 hexToRGBA(map-get($grays, 'pressed'), 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
 $drawing-board-padding:                      6.25rem 4.688rem; // 100px 75px;
 
+//////////////////////////// Form ///////////////////////////
+$group-accordion-border-color:               $gray300;
 
 //////////////////////////// CI 모달 /////////////////////////
 $cmdb-ci-modal-width:                        62.5rem; // 1000px
