#10916 - 리스트 화면 구현 - 화면깨짐 정리 (클래스명 정리)

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2885,12 +2885,12 @@ table[id=documentDisplay] td {
   padding-top: 0.9375rem;
   padding-bottom: 0.9375rem;
 }
-.z-itsm-container .z-main-page .z-page-content .z-list a, .z-itsm-container .z-main-page .z-page-content .z-list button {
-  cursor: pointer;
-}
 .z-itsm-container .z-main-page .z-page-content .z-list-content {
   display: flex;
   flex: 1;
+}
+.z-itsm-container .z-main-page .z-page-content .z-list-content a, .z-itsm-container .z-main-page .z-page-content .z-list-content button {
+  cursor: pointer;
 }
 .z-itsm-container .z-main-page .z-page-content .z-list-table {
   position: relative;
