--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
     <input type="hidden" id="ciListCount" th:value="${ciListCount}"/>
-    <table class="z-list-content">
+    <table class="z-list-table">
         <thead class="z-list-head">
             <tr>
                 <th style="width: 5%;" class="align-center"></th>
