--- a/src/main/resources/public/template/custom-code/customCodeList.html
+++ b/src/main/resources/public/template/custom-code/customCodeList.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-content">
+<table class="z-list-table">
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width:50%" class="align-left" th:text="#{customCode.label.name}"></th>
