--- a/src/main/resources/public/template/faq/faqList.html
+++ b/src/main/resources/public/template/faq/faqList.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head></head>
 <body>
-<table class="z-list-content">
+<table class="z-list-table">
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width:20%;" class="align-left" th:text="#{faq.label.category}"></th>
