--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -80,7 +80,7 @@
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.ci.label.history}"></h3>
             </div>
             <div class="ci-list" id="ciHistoryList">
-                <table class="z-list-content">
+                <table class="z-list-table">
                     <thead class="z-list-head">
                     <tr class="flex-row align-items-center">
                         <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relatedDocument}"></th>
@@ -113,7 +113,7 @@
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.ci.label.relation}"></h3>
             </div>
             <div class="ci-list" id="ciRelationList">
-                <table class="z-list-content">
+                <table class="z-list-table">
                     <thead class="z-list-head">
                     <tr class="flex-row align-items-center">
                         <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.relationType}"></th>
