--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-content">
+<table class="z-list-table">
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width:5%;" class="align-center" th:text="#{download.label.seq}"></th>
