--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-<table class="z-list-content">
+<table class="z-list-table">
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width:30%;" class="align-left" th:text="#{common.label.title}"></th>
