--- a/src/main/resources/public/template/numbering-pattern/numberingPatternList.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-content">
+<table class="z-list-table">
     <thead class="z-list-head">
     <tr class="flex-row align-items-center">
         <th style="width:25%;" class="align-left" th:text="#{pattern.label.name}"></th>
