--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-content">
+<table class="z-list-table">
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
             <th style="width: 20%" class="align-left" th:text="#{process.label.name}"></th>
