#11034  비밀 번호 변경 안내 모달 디자인 적용(임지영 대리님 MR피드백 추가)

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -5032,21 +5032,21 @@ body.modal-active {
   padding: 1.125rem 0 0 1.25rem;
 }
 .modal-wrapper .modal-dialog .modal-content {
-  height: calc(22.5rem - 3.375rem - 4.6rem);
+  height: calc(22.5rem - 3.375rem - 3.5rem);
   overflow: auto;
 }
 .modal-wrapper .modal-dialog .modal-bottom {
-  height: 4.6rem;
-  padding: 1.25rem 1.25rem 1.25rem 0;
+  height: 3.5rem;
+  padding: 0 1.25rem 1.25rem 0;
 }
 
 .modal-dialog.password-update-notice {
   width: 46.875rem;
-  height: 36.875rem;
+  height: 34.5rem;
 }
 .modal-dialog.password-update-notice .modal-content {
-  height: calc(36.875rem - 3.375rem - 4.6rem);
-  padding: 0.625rem 1.25rem 0.625rem 1.25rem;
+  height: calc(34.5rem - 3.375rem - 3.5rem);
+  padding: 0.25rem 1.25rem 0.25rem 1.25rem;
 }
 .modal-dialog.password-update-notice .modal-content .field-label {
   display: inline-block;
