--- a/src/main/resources/public/scss/template/_modal.scss
+++ b/src/main/resources/public/scss/template/_modal.scss
@@ -50,7 +50,7 @@ body.modal-active {
 
     .modal-bottom {
       height: $modal-bottom-height;
-      padding: 1.25rem 1.25rem 1.25rem 0; // 20px
+      padding: 0 1.25rem 1.25rem 0; // 20px
     }
   }
 }
