--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -124,17 +124,18 @@
                 formModal.show();
             }
         };
+
         function createModalContent(data) {
             return `<div class="flex-column">` +
                 `<label> ${i18n.msg('user.msg.updatePasswordNotice', passwordExpiredPeriod)}</label>` +
                 `<label> ${i18n.msg('user.tooltip.pwRuleSummary')}</label>` +
-                `</br>` +
                 `<label>${i18n.msg('user.label.nowUserPassword')} </label>` +
                 `<input type="password" id="nowPassword" class="z-input" maxlength="20" required="required">` +
                 `<label>${i18n.msg('user.label.newUserPassword')} </label>` +
                 `<input type="password" id="newPassword" class="z-input" maxlength="20" required="required">` +
                 `<label>${i18n.msg('user.label.newUserRePassword')} </label>` +
-                `<input type="password" id="newRePassword" class="z-input" maxlength="20" required="required">`
+                `<input type="password" id="newRePassword" class="z-input" maxlength="20" required="required">` +
+                '</div>'
         }
 
         function validation() {
