--- a/src/main/resources/public/scss/portal/_variables.scss
+++ b/src/main/resources/public/scss/portal/_variables.scss
@@ -154,4 +154,25 @@ $email-certificate-border-color:             $gray300;
 $password-update-modal-width:                46.875rem; //750px
 $password-update-modal-height:               34.5rem; //552px
 $modal-header-height:                        3.375rem; //54px
-$modal-bottom-height:                        3.5rem; //3.5px
+$modal-bottom-height:                        3.5rem; //56px
+
+////////////////////////////// 리스트 //////////////////////////////
+// 리스트 - 마우스 오버시
+$list-hover-bg-color:                         map-get($grays, 'line');
+
+// 리스트 - 데이터 없을때
+$no-data-found-list-bg:                       map-get($grays, 'line');
+
+// 리스트 - 선택시
+$list-active-font-color:                      map-get($blues, 'dark');
+$list-active-bg-color:                        hexToRGBA(#e6e8eb, 0.6);
+
+// 공지사항 상단 공지 (배경색 별도 처리)
+$notice-pinned-color:                         $blue100;
+
+// Document color icon
+$document-color-size:                         1rem; // 16px
+
+// 리스트 항목명
+$list-head-font-size:                         $gray800;
+
