--- a/src/main/resources/public/scss/document/_layout.scss
+++ b/src/main/resources/public/scss/document/_layout.scss
@@ -5,7 +5,7 @@
  *                - z-document-main : 문서양식 메인
  *                             - z-document-main-header : 문서 번호, 버튼 등이 그려지는 영역
  *                             - z-drawing-board : 실제 컴포넌트들이 그려지는 영역 (컴포넌트 디자인 수정 > form/_component.scss )
- *                - token-properties : 문서이력, 관련문서, 의견, 태그
+ *                - z-token-properties : 문서이력, 관련문서, 의견, 태그
  */
 
 // 신청서, 문서함 공통
@@ -58,42 +58,43 @@
   // 2021-06-26 Jung Hee Chan
   // 신청서 디자인은 되었는데 문서함쪽은 고려가 안되어 있는 것 같아 일단 붙여 놓음.
   // 디자인 적용 작업 시 신청서 + 문서함 부분과 나눠지는 부분에 대한 고려가 필요함.
-  .token-properties {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 38.13rem;
-    background-color: #ffffff;
-    border-left: 0.0625rem solid #EBEBEB;
+  .z-token-properties {
+    @include fixed(0, 0, 0, null);
+    width: $layout-properties-width;
+    background-color: $layout-properties-bg-color;
+    @include border($layout-properties-border-width, solid, $layout-properties-border-color, left);
     padding: 0 4.0625rem;
     overflow-y: auto;
 
-    .token-info-tab {
+    .z-token-tabs {
       display: flex;
-      margin-top: 7.8125rem;
+      margin-top: 2rem; // 32px
 
-      h4 {
-        font-size: 1.125rem;
-        font-weight: 500;
-        color: #ACB4BF;
+      .z-token-tab {
+        color: $token-tab-color;
         flex: 1;
-        padding-bottom: 0.625rem;
-        border-bottom: 0.125rem solid #E1E3E6;
-        cursor: pointer;
-      }
-      // 선택된 탭일 경우
-      .active {
-        color: #3F4B56;
-        border-bottom: 0.25rem solid #0098FF;
+        padding: 0.625rem 0; // 10px 0
+        @include border($token-tab-border-width, solid, $token-tab-border-color, bottom);
+
+        // 선택된 탭일 경우
+        &.active {
+          color: $token-tab-selected-color;
+          @include border($token-tab-selected-border-width, solid, $token-tab-selected-border-color, bottom);
+        }
       }
     }
     // 탭 내용
-    .token-info-contents {
+    .z-token-panels {
       height: 43.75rem;
       overflow-y: auto;
 
-      .token {
+      .z-token-panel {
+        display: none;
+
+        &.on { display: block; }
+      }
+
+      .z-token {
         // 태그
         &-tag {
           display: none;
@@ -104,41 +105,47 @@
         &-history {
           height: 100%;
 
-          .table {
+          &-sub-title {
+            display: block;
+            color: $token-tab-sub-title-color;
+            margin: 1.75rem 0 0.375rem 0; // 28px 0 6px 0
+          }
+
+          &-table {
             width: 100%;
+            font-family: $token-history-table-font-family;
+            font-size: $token-history-table-font-size;
 
             thead {
-              border-bottom: 0.0625rem solid map-get($grays, 'default'); // 1px
-              tr {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                height: 3.438rem; // 55px
-              }
+              background-color: $token-history-thead-bg-color;
+              @include border($token-history-table-border-width, solid, $token-history-table-border-color, top);
+
+              tr { height: 2rem; } // 32px
             }
 
             th, td {
               @include ellipsis(table-cell);
+              padding: 0 0.625rem; // 0 10px
             }
 
             th {
-              color: map-get($blacks, 'light');
+              font-size: $token-history-table-font-size;
+              color: $token-history-thead-color;
+              font-weight: $token-history-thead-font-weight;
             }
 
             td {
-              color: map-get($grays, 'dark');
+              color: $token-history-tbody-color;
             }
 
             tbody {
               width: 100%;
-              height: 37.5rem; // 600px;
+              @include border(calc(#{$token-history-table-border-width} * 2), solid, $token-history-table-border-color, top);
               overflow-y: auto;
 
               tr {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
                 width: 100%;
+                @include border($token-history-table-border-width, solid, $token-history-table-border-color, bottom);
               }
             }
           }
@@ -146,85 +153,74 @@
 
         // 관련 문서
         &-related {
-          display: none;
-          padding-top: 0.625rem; // 10px
 
-          .list-item {
-            height: 11.5625rem; // 185px
+          &-sub-title {
+            display: block;
+            color: $token-tab-sub-title-color;
+            margin: 2.5rem 0 0.375rem 0; // 40px 0 6px 0
+          }
+
+          &-item {
+            height: 9.75rem; // 156px
             margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
+
             // 추가된 관련 문서
-            .document {
-              &-color {
-                width: 0.625rem; // 10px
-              }
+            .z-document {
+              &-color { width: 0.375rem; } // 6px
 
               &-row {
                 flex: 1;
-                border: 0.0625rem solid map-get($grays, 'line'); // 1px
-                padding: 1.25rem 2.5rem; // 20px 40px
+                @include border($token-related-border-width, solid, $token-related-border-color, all);
+                padding: 1rem; // 16px
                 &-content {
                   a {
                     width: 100%;
 
-                    .document-title {
-                      word-break: break-word;
+                    .z-document-title {
+                      @include wordWrap();
 
-                      h5 {
+                      h6 {
                         &:first-child {
-                          font-weight: $font-weight-medium;
-                          color: map-get($blacks, 'light');
+                          font-weight: $font-weight-bold;
+                          color: $token-related-name-color;
                         }
 
                         &:last-child {
-                          font-weight: $font-weight-regular;
-                          color: $gray;
-                          margin-left: 0.3125rem; // 5px
+                          color: $token-related-numbering-color;
+                          margin-left: 0.5rem; //8px
                         }
                       }
                     }
                   }
 
-                  button {
-                    padding: 0;
-
-                    .icon-delete {
-                      background: map-get($grays, 'pressed');
-                    }
+                  .z-icon {
+                    &.i-delete { background: $element-icon-color; }
                   }
                 }
 
-                &-topic {
-                  height: 100%;
-                  color: map-get($grays, 'dark');
+                &-topic { height: 100%; }
 
-                  h5 {
-                    font-weight: $font-weight-regular;
-                  }
-                }
-
-                &-info {
-                  h5 {
-                    color: map-get($grays, 'dark');
-                    font-weight: $font-weight-regular
-                  }
-                }
+                &-info { }
               }
             }
           }
 
-          // 추가
-          .related-add {
-            height: 11.5625rem; // 185px
-            border: 0.0625rem solid map-get($grays, 'line'); // 1px
-            background-color: map-get($grays, 'light');
-            margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
-            display: flex;
+          // 관련 문서 추가
+          .z-document-add {
+            @include border($token-related-border-width, solid, $token-related-border-color, all);
+            background-color: $token-related-add-bg-color;
+            .z-button-icon {
+              width: 100%;
+              height: 100%;
+              .z-icon {
+                &.i-plus { background: $element-icon-color; }
+              }
+            }
           }
         }
 
         // 댓글
         &-comment {
-          display: none;
           padding-top: 0.625rem; // 10px
 
           .list-item {
@@ -245,7 +241,7 @@
                     color: map-get($grays, 'dark');
                   }
 
-                  .user-date-time {
+                  .date-time {
                     color: $gray;
                     margin-left: 0.625rem; // 10px
                   }
