--- a/src/main/resources/public/template/formDesigner/fragments/formHead.html
+++ b/src/main/resources/public/template/formDesigner/fragments/formHead.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <link th:href="@{/assets/vendors/tagify/tagify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <link th:href="@{/assets/css/formDesigner.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
+    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
     <script th:src="@{/assets/js/lib/zUtil.js}"></script>
     <script th:src="@{/assets/js/lib/zSelectBox.js}"></script>
     <script th:src="@{/assets/js/lib/zModal.js}"></script>
@@ -22,6 +23,7 @@
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
     <script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
     <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
     <script th:src="@{/assets/js/lib/zTree.js}"></script>
