--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -10,6 +10,7 @@
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/toastify/toastify.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/vendors/tagify/tagify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/lib/zI18n.js}"></script>
     <script th:src="@{/assets/js/lib/zModal.js}"></script>
@@ -18,6 +19,7 @@
     <script th:src="@{/assets/js/lib/zSelectBox.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
+    <script th:src="@{/assets/js/lib/zColorPicker.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
