--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="document-row-info">
                     <div class="document-detail flex-row align-items-center float-right">
-                        <div class="document-user inline-flex align-items-center justify-content-center">
+                        <div class="inline-flex align-items-center justify-content-center">
                             <img class="z-img i-profile-photo mr-2" alt="profile pic" th:src="${token.avatarPath}" width="32" height="32">
                             <span class="user-name" th:text="${token.createUserName}"></span>
                         </div>
