--- a/src/main/resources/public/template/report/reportTemplateList.html
+++ b/src/main/resources/public/template/report/reportTemplateList.html
@@ -10,10 +10,11 @@
     <thead class="list-head">
     <tr class="flex-row align-items-center">
         <th style="width:25%;" class="align-left" th:text="#{report.label.templateName}"></th>
-        <th style="width:25%;" class="align-left" th:text="#{report.label.description}"></th>
+        <th style="width:20%;" class="align-left" th:text="#{report.label.description}"></th>
         <th style="width:25%;" class="align-left" th:text="#{report.label.chart}"></th>
         <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
         <th style="width:15%;" class="align-center" th:text="#{common.label.writeDate}"></th>
+        <th style="width:5%;" class="align-center"></th>
     </tr>
     </thead>
     <tbody class="list-body">
@@ -29,11 +30,17 @@
                    th:href="@{/reports/template/{id}/edit(id=${template.templateId})}"></a>
             </td>
             <td style="width:25%;" class="align-left" th:text="${template.templateDesc}"></td>
-            <td style="width:25%;" class="align-left">
+            <td style="width:20%;" class="align-left">
                 <span class="label" th:each="chart : ${template?.charts}" th:text="#{${chart.chartName}}"></span>
             </td>
             <td style="width:10%;" class="align-center" id="userName" th:text="${template?.createUserName}"></td>
             <td style="width:15%;" class="align-center date-time" name="createDt" th:text="${template.createDt}"></td>
+            <td style="width: 5%;">
+                <button type="button" class="z-button-icon form" sec:authorize="hasAuthority('report.create')"
+                        th:onclick="makeReport([[${template.templateId}]])">
+                    <span class="z-icon i-edit"></span>
+                </button>
+            </td>
         </tr>
     </th:block>
     </tbody>
